[package]
name = "iota-execution"
version = "0.1.0"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Multiplexer to choose between multiple versions of iota and move execution crates."

[dependencies]
iota-protocol-config.workspace = true
iota-types.workspace = true

move-binary-format.workspace = true
move-vm-config.workspace = true

iota-adapter-latest = { path = "latest/iota-adapter" }
iota-adapter-v0 = { path = "v0/iota-adapter" }
# iota-adapter-$CUT = { path = "$CUT/iota-adapter" }
iota-move-natives-latest = { path = "latest/iota-move-natives" }
iota-move-natives-v0 = { path = "v0/iota-move-natives" }
# iota-move-natives-$CUT = { path = "$CUT/iota-move-natives" }
iota-verifier-latest = { path = "latest/iota-verifier" }
iota-verifier-v0 = { path = "v0/iota-verifier" }
# iota-verifier-$CUT = { path = "$CUT/iota-verifier" }

move-bytecode-verifier-latest = { path = "../external-crates/move/crates/move-bytecode-verifier", package = "move-bytecode-verifier" }
move-bytecode-verifier-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-bytecode-verifier" }
# move-bytecode-verifier-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-bytecode-verifier" }
move-vm-runtime-latest = { path = "../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }
move-vm-runtime-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-vm-runtime" }
# move-vm-runtime-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-runtime" }

[dev-dependencies]
cargo_metadata = "0.15.4"
petgraph = "0.5.1"

[features]
default = []
gas-profiler = [
  #   "iota-adapter-$CUT/gas-profiler",
  "iota-adapter-v0/gas-profiler",
  "iota-adapter-latest/gas-profiler",
  #   "iota-adapter-$CUT/gas-profiler",
  "move-vm-runtime-v0/gas-profiler",
  "move-vm-runtime-latest/gas-profiler",
  #   "move-vm-runtime-$CUT/gas-profiler",
  "move-vm-config/gas-profiler",
]
