[package]
name = "consensus-config"
version = "0.1.0"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
fastcrypto.workspace = true
mysten-network.workspace = true
rand.workspace = true
serde.workspace = true
shared-crypto.workspace = true

[dev-dependencies]
insta.workspace = true
