[package]
name = "consensus-core"
version = "0.1.0"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
anemo.workspace = true
anemo-tower.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
base64.workspace = true
bcs.workspace = true
bytes.workspace = true
cfg-if.workspace = true
consensus-config.workspace = true
dashmap.workspace = true
enum_dispatch.workspace = true
fastcrypto.workspace = true
futures.workspace = true
http.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
hyper-util.workspace = true
iota-common.workspace = true
iota-macros.workspace = true
iota-metrics.workspace = true
iota-network-stack.workspace = true
iota-protocol-config.workspace = true
iota-tls.workspace = true
itertools.workspace = true
mockall.workspace = true
nom = "7.1.3"
parking_lot.workspace = true
prometheus.workspace = true
prost.workspace = true
quinn-proto.workspace = true
rand.workspace = true
rustls.workspace = true
serde.workspace = true
shared-crypto.workspace = true
strum_macros.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
typed-store.workspace = true

[dev-dependencies]
rstest.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true

[build-dependencies]
anemo-build.workspace = true
tonic-build.workspace = true
