[package]
name = "consensus-core"
version = "0.1.0"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anemo.workspace = true
anemo-tower.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
base64.workspace = true
bcs.workspace = true
bytes.workspace = true
cfg-if.workspace = true
consensus-config.workspace = true
dashmap.workspace = true
enum_dispatch.workspace = true
fastcrypto.workspace = true
futures.workspace = true
iota-metrics.workspace = true
iota-network-stack.workspace = true
iota-protocol-config.workspace = true
mockall.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
prost.workspace = true
quinn-proto.workspace = true
rand.workspace = true
serde.workspace = true
shared-crypto.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
typed-store.workspace = true

[dev-dependencies]
rstest.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true

[build-dependencies]
anemo-build.workspace = true
tonic-build.workspace = true
