[package]
name = "anemo-benchmark"
version = "0.0.0"
authors = ["Andrew Schran <aschran@iota.org>", "IOTA Foundation <build@iota.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anemo.workspace = true
clap = { version = "4.1.4", features = ["derive"] }
iota-network-stack.workspace = true
rand.workspace= true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
anemo-build.workspace = true

[dev-dependencies]
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["test-util"] }
