[package]
name = "data-transform"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
fastcrypto = { workspace = true, features = ["copy_key"] }
iota-indexer.workspace = true
iota-json-rpc-types.workspace = true
iota-types.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
once_cell.workspace = true
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = { version = "1.0.95", features = ["preserve_order", "arbitrary_precision"] }
tracing = "0.1.37"
