[package]
name = "iota-adapter-transactional-tests"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Transactional tests for Iota Adapter"

[dev-dependencies]
# external dependencies
datatest-stable.workspace = true

# internal dependencies
iota-transactional-test-runner.workspace = true

[[test]]
name = "tests"
harness = false

[dependencies]
