[package]
name = "iota-analytics-indexer"
version.workspace = true
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
async-trait.workspace = true
axum.workspace = true
bcs.workspace = true
byteorder.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
eyre.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
gcp-bigquery-client = "=0.18.0"
iota-analytics-indexer-derive.workspace = true
iota-config.workspace = true
iota-data-ingestion-core.workspace = true
iota-indexer.workspace = true
iota-json-rpc-types.workspace = true
iota-metrics.workspace = true
iota-package-resolver.workspace = true
iota-rest-api.workspace = true
iota-storage.workspace = true
iota-types.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
num_enum.workspace = true
object_store.workspace = true
parquet = "52.1"
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
snowflake-api = { version = "0.9" }
strum.workspace = true
tap = "1.0"
telemetry-subscribers.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
typed-store.workspace = true
url.workspace = true

[dev-dependencies]
simulacrum.workspace = true

[[bin]]
name = "iota-analytics-indexer"
path = "src/main.rs"
