[package]
name = "iota-archival"
version.workspace = true
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
bytes.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
futures.workspace = true
indicatif.workspace = true
iota-config.workspace = true
iota-storage.workspace = true
iota-types = { workspace = true, features = ["test-utils"] }
num_enum.workspace = true
object_store.workspace = true
prometheus.workspace = true
rand.workspace = true
serde.workspace = true
serde_json = "1.0.95"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

[dev-dependencies]
ed25519-consensus.workspace = true
fastcrypto = { workspace = true }
iota-macros.workspace = true
iota-swarm-config.workspace = true
more-asserts.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-package.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[target.'cfg(msim)'.dependencies]
iota-simulator.workspace = true
