[package]
name = "iota-authority-aggregation"
authors = ["IOTA Foundation <contact@iota.org>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
iota-types.workspace = true
iota-metrics.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
