[package]
name = "iota-authority-aggregation"
version = "0.1.0"
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
futures.workspace = true
tokio.workspace = true
tracing.workspace = true

# internal dependencies
iota-metrics.workspace = true
iota-types.workspace = true
