[package]
name = "iota-aws-orchestrator"
version = "0.0.1"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-runtime.workspace = true
aws-sdk-ec2.workspace = true
aws-smithy-http.workspace = true
aws-smithy-runtime-api.workspace = true
clap.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
eyre.workspace = true
futures.workspace = true
prettytable-rs.workspace = true
prometheus-parse.workspace = true
reqwest.workspace = true
russh.workspace = true
russh-keys.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

iota-config = { path = "../iota-config" }
iota-swarm-config = { path = "../iota-swarm-config" }
iota-types = { path = "../iota-types" }
mysten-metrics.workspace = true
narwhal-config.workspace = true

[dev-dependencies]
tempfile = "3.6.0"

[[bin]]
name = "iota-aws-orchestrator"
path = "src/main.rs"
