[package]
name = "iota-aws-orchestrator"
version = "0.0.1"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-runtime = "1.3"
aws-sdk-ec2 = "1.62"
aws-smithy-http = "0.60"
aws-smithy-runtime-api = "1.7"
clap.workspace = true
color-eyre = "0.6"
crossterm.workspace = true
eyre.workspace = true
futures.workspace = true
prettytable-rs = "0.10"
prometheus-parse = "0.2"
reqwest.workspace = true
russh = "0.44"
russh-keys = "0.44"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

iota-config = { path = "../iota-config" }
iota-metrics.workspace = true
iota-swarm-config = { path = "../iota-swarm-config" }
iota-types = { path = "../iota-types" }
narwhal-config.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "iota-aws-orchestrator"
path = "src/main.rs"
