[package]
name = "iota-benchmark"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
tokio = { workspace = true, features = ["full"] }
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
clap.workspace = true
prometheus.workspace = true
rand.workspace = true
indicatif.workspace = true
duration-str.workspace = true
hdrhistogram.workspace = true
comfy-table.workspace = true
bcs.workspace = true
tokio-util.workspace = true
iota-core.workspace = true
iota-config.workspace = true
iota-network.workspace = true
iota-storage.workspace = true
iota-types.workspace = true
iota-sdk.workspace = true
iota-keys.workspace = true
iota-json-rpc-types.workspace = true
iota-protocol-config.workspace = true
iota-test-transaction-builder.workspace = true
iota-swarm-config.workspace = true
telemetry-subscribers.workspace = true
roaring.workspace = true
regex.workspace = true
fastcrypto-zkp.workspace = true

move-core-types.workspace = true
mysten-metrics.workspace = true
narwhal-node.workspace = true
test-cluster.workspace = true
sysinfo.workspace = true

[target.'cfg(msim)'.dependencies]
iota-framework.workspace = true
iota-framework-snapshot.workspace = true
iota-macros.workspace = true
iota-simulator.workspace = true
typed-store.workspace = true

[features]
benchmark = ["narwhal-node/benchmark"]
