[package]
name = "iota-benchmark"
version = "0.0.0"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait.workspace = true
bcs.workspace = true
clap.workspace = true
comfy-table.workspace = true
duration-str.workspace = true
fastcrypto-zkp.workspace = true
futures.workspace = true
hdrhistogram.workspace = true
indicatif.workspace = true
iota-config.workspace = true
iota-core.workspace = true
iota-json-rpc-types.workspace = true
iota-keys.workspace = true
iota-network.workspace = true
iota-protocol-config.workspace = true
iota-sdk.workspace = true
iota-storage.workspace = true
iota-surfer.workspace = true
iota-swarm-config.workspace = true
iota-test-transaction-builder.workspace = true
iota-types.workspace = true
itertools.workspace = true
prometheus.workspace = true
rand.workspace = true
regex.workspace = true
roaring.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true

iota-metrics.workspace = true
move-core-types.workspace = true
narwhal-node.workspace = true
sysinfo.workspace = true
test-cluster.workspace = true

[target.'cfg(msim)'.dependencies]
iota-framework.workspace = true
iota-framework-snapshot.workspace = true
iota-macros.workspace = true
iota-simulator.workspace = true
typed-store.workspace = true

[features]
benchmark = ["narwhal-node/benchmark"]
