[package]
name = "iota-bridge-cli"
version.workspace = true
authors = ["IOTA Foundation <contact@iota.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
ethers = "2.0"
iota-bridge.workspace = true
iota-sdk.workspace = true
iota-types.workspace = true
iota-config.workspace = true
iota-keys.workspace = true
iota-json-rpc-types.workspace = true
shared-crypto.workspace = true
fastcrypto.workspace = true
move-core-types.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
telemetry-subscribers.workspace = true
reqwest.workspace = true
futures.workspace = true
