[package]
name = "iota-bridge-cli"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
clap.workspace = true
ethers = "2.0"
fastcrypto.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
tracing.workspace = true

# internal dependencies
iota-bridge.workspace = true
iota-config.workspace = true
iota-json-rpc-types.workspace = true
iota-keys.workspace = true
iota-sdk.workspace = true
iota-types.workspace = true
move-core-types.workspace = true
shared-crypto.workspace = true
telemetry-subscribers.workspace = true
