[package]
name = "iota-bridge-indexer"
version = "0.1.0"
authors = ["IOTA Foundation <contact@iota.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde.workspace = true
tap.workspace = true
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "serde_json"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
rayon = "1.10.0"
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
bcs.workspace = true
bin-version.workspace = true
clap.workspace = true
iota-metrics.workspace = true
prometheus.workspace = true
serde_yaml.workspace = true
iota-bridge.workspace = true
iota-sdk.workspace = true
iota-json-rpc-types.workspace = true
iota-data-ingestion-core.workspace = true
iota-types.workspace = true
telemetry-subscribers.workspace = true
tracing.workspace = true
backoff.workspace = true
iota-config.workspace = true
iota-indexer-builder.workspace = true

[dev-dependencies]
iota-types = { workspace = true, features = ["test-utils"] }
iota-test-transaction-builder.workspace = true
test-cluster.workspace = true
hex-literal = "0.3.4"

[[bin]]
name = "bridge-indexer"
path = "src/main.rs"
