[package]
name = "iota-bridge-indexer"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
bcs.workspace = true
clap.workspace = true
diesel = { workspace = true, features = ["postgres", "r2d2", "serde_json"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
futures.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tap.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

# internal dependencies
iota-bridge.workspace = true
iota-config.workspace = true
iota-data-ingestion-core.workspace = true
iota-indexer-builder.workspace = true
iota-json-rpc-types.workspace = true
iota-metrics.workspace = true
iota-sdk.workspace = true
iota-types.workspace = true
telemetry-subscribers.workspace = true

[dev-dependencies]
iota-test-transaction-builder.workspace = true
iota-types = { workspace = true, features = ["test-utils"] }

[[bin]]
name = "bridge-indexer"
path = "src/main.rs"
