[package]
name = "iota-bridge"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bcs.workspace = true
clap.workspace = true
const-str.workspace = true
ethers = "2.0"
eyre.workspace = true
fastcrypto.workspace = true
futures.workspace = true
git-version.workspace = true
iota-common.workspace = true
iota-config.workspace = true
iota-json-rpc-types.workspace = true
iota-sdk.workspace = true
iota-types.workspace = true
lru.workspace = true
move-core-types.workspace = true
iota-metrics.workspace = true
num_enum.workspace = true
once_cell.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
shared-crypto.workspace = true
tap.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
typed-store.workspace = true
typed-store-derive.workspace = true
url.workspace = true

[dev-dependencies]
hex-literal = "0.3.4"
iota-config.workspace = true
iota-json-rpc-types = { workspace = true, features = ["test-utils"] }
iota-test-transaction-builder.workspace = true
iota-types = { workspace = true, features = ["test-utils"] }
test-cluster.workspace = true

[[bin]]
name = "iota-bridge-cli"
path = "src/tools/cli.rs"
