[package]
name = "iota-bridge"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
backoff.workspace = true
bcs.workspace = true
clap.workspace = true
enum_dispatch.workspace = true
ethers = "2.0"
eyre.workspace = true
fastcrypto.workspace = true
futures.workspace = true
lru.workspace = true
num_enum.workspace = true
once_cell.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tap.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
url.workspace = true

# internal dependencies
bin-version.workspace = true
iota-authority-aggregation.workspace = true
iota-config.workspace = true
iota-json-rpc-api.workspace = true
iota-json-rpc-types.workspace = true
iota-keys.workspace = true
iota-metrics.workspace = true
iota-sdk.workspace = true
iota-test-transaction-builder.workspace = true
iota-types.workspace = true
move-core-types.workspace = true
shared-crypto.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true

[dev-dependencies]
# external dependencies
hex-literal = "0.3.4"
maplit = "1.0.2"

# internal dependencies
iota-config.workspace = true
iota-json-rpc-types = { workspace = true, features = ["test-utils"] }
iota-test-transaction-builder.workspace = true
iota-types = { workspace = true, features = ["test-utils"] }
test-cluster.workspace = true
