[package]
name = "iota-cluster-test"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
futures.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
jsonrpsee.workspace = true
tracing.workspace = true
clap.workspace = true
reqwest.workspace = true
async-trait.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
uuid.workspace = true
prometheus.workspace = true
fastcrypto.workspace = true
shared-crypto.workspace = true
derivative.workspace = true
regex.workspace = true

iota-indexer.workspace = true
iota-faucet.workspace = true
iota-graphql-rpc.workspace = true
iota-swarm.workspace = true
iota.workspace = true
iota-swarm-config.workspace = true
iota-json-rpc-types.workspace = true
iota-sdk.workspace = true
iota-keys.workspace = true
iota-types.workspace = true
iota-core.workspace = true
iota-json.workspace = true
iota-config.workspace = true
iota-test-transaction-builder.workspace = true
telemetry-subscribers.workspace = true

test-cluster.workspace = true
move-core-types.workspace = true

[features]
pg_integration = []
