[package]
name = "iota-cluster-test"
version.workspace = true
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait.workspace = true
clap.workspace = true
derivative.workspace = true
diesel.workspace = true
fastcrypto.workspace = true
futures.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
shared-crypto.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
uuid.workspace = true

iota-config.workspace = true
iota-core.workspace = true
iota-faucet.workspace = true
iota-graphql-rpc.workspace = true
iota-indexer.workspace = true
iota-json.workspace = true
iota-json-rpc-types.workspace = true
iota-keys.workspace = true
iota-sdk.workspace = true
iota-swarm.workspace = true
iota-swarm-config.workspace = true
iota-test-transaction-builder.workspace = true
iota-types.workspace = true
telemetry-subscribers.workspace = true

move-core-types.workspace = true
test-cluster.workspace = true

[features]
default = ["postgres-feature"]
postgres-feature = ["diesel/postgres", "diesel/postgres_backend"]
pg_integration = []
