[package]
name = "iota-common"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
futures.workspace = true
iota-types.workspace = true
mysten-metrics.workspace = true
tokio.workspace = true
tracing.workspace = true
