[package]
name = "iota-config"
version = "0.0.0"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anemo.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
bcs.workspace = true
clap.workspace = true
csv.workspace = true
dirs.workspace = true
fastcrypto.workspace = true
object_store.workspace = true
once_cell.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tracing.workspace = true

iota-keys.workspace = true
iota-protocol-config.workspace = true
iota-types.workspace = true
narwhal-config.workspace = true

[dev-dependencies]
iota-types = { workspace = true, features = ["test-utils"] }
