[package]
name = "iota-core"
version = "0.1.0"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
arc-swap.workspace = true
async-trait.workspace = true
bcs.workspace = true
bytes.workspace = true
chrono.workspace = true
consensus-config.workspace = true
consensus-core.workspace = true
dashmap.workspace = true
diffy = { version = "0.3", default-features = false }
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
futures.workspace = true
im.workspace = true
indexmap.workspace = true
itertools.workspace = true
lru.workspace = true
mockall.workspace = true
num_cpus.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
roaring.workspace = true
rocksdb.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signature.workspace = true
static_assertions.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-stream.workspace = true
tracing.workspace = true
twox-hash.workspace = true

anemo.workspace = true
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
fastcrypto-zkp.workspace = true
move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-symbol-pool.workspace = true
mysten-common.workspace = true
mysten-network.workspace = true
telemetry-subscribers.workspace = true
typed-store.workspace = true
typed-store-derive.workspace = true

iota-archival.workspace = true
iota-authority-aggregation.workspace = true
iota-config.workspace = true
iota-execution = { path = "../../iota-execution" }
iota-framework.workspace = true
iota-genesis-builder.workspace = true
iota-json-rpc-types.workspace = true
iota-macros.workspace = true
iota-move-build.workspace = true
iota-network.workspace = true
iota-protocol-config.workspace = true
iota-simulator.workspace = true
iota-storage.workspace = true
iota-swarm-config.workspace = true
iota-transaction-checks.workspace = true
iota-types.workspace = true
mysten-metrics.workspace = true
narwhal-config.workspace = true
narwhal-crypto.workspace = true
narwhal-executor.workspace = true
narwhal-network.workspace = true
narwhal-node.workspace = true
narwhal-test-utils.workspace = true
narwhal-types.workspace = true
narwhal-worker.workspace = true
shared-crypto.workspace = true
zeroize.workspace = true

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
expect-test.workspace = true
fs_extra.workspace = true
more-asserts.workspace = true
num-bigint = "0.4.4"
pretty_assertions.workspace = true
serde-reflection.workspace = true
serde_yaml.workspace = true

move-symbol-pool.workspace = true

iota-test-transaction-builder.workspace = true
iota-types = { workspace = true, features = ["test-utils"] }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
pprof.workspace = true
test-fuzz.workspace = true

iota-macros.workspace = true
iota-protocol-config.workspace = true

# moka uses `quanta` by default for timing, which is not compatible with the simulator
[target.'cfg(msim)'.dependencies]
moka = { workspace = true, default-features = false, features = ["sync", "atomic64"] }

[target.'cfg(msim)'.dev-dependencies]
test-cluster.workspace = true

[target.'cfg(not(msim))'.dependencies]
moka = { workspace = true, features = ["sync"] }

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false

[[bench]]
name = "verified_cert_cache_bench"
harness = false

[[bench]]
name = "batch_verification_bench"
harness = false
required-features = ["test-utils"]

[features]
test-utils = []

[package.metadata.cargo-udeps.ignore]
development = ["pprof", "test-fuzz"]
