[package]
name = "iota-cost"
version = "0.1.0"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
bcs.workspace = true
iota-types.workspace = true
serde.workspace = true
strum.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
insta.workspace = true
iota-config.workspace = true
iota-json-rpc-types.workspace = true
iota-move-build.workspace = true
iota-swarm-config.workspace = true
iota-test-transaction-builder.workspace = true
move-cli.workspace = true
move-disassembler.workspace = true
test-cluster.workspace = true
