[package]
name = "iota-cost"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dev-dependencies]
# external dependencies
anyhow.workspace = true
bcs.workspace = true
insta.workspace = true
serde.workspace = true
strum.workspace = true
tokio = { workspace = true, features = ["full"] }

# internal dependencies
iota-config.workspace = true
iota-json-rpc-types.workspace = true
iota-move-build.workspace = true
iota-swarm-config.workspace = true
iota-test-transaction-builder.workspace = true
iota-types.workspace = true
move-disassembler.workspace = true
test-cluster.workspace = true
