[package]
name = "iota-data-ingestion-core"
version = "0.1.0"
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
futures.workspace = true
iota-storage.workspace = true
iota-types.workspace = true
mysten-metrics.workspace = true
notify.workspace = true
object_store.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tap.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
iota-types = { workspace = true, features = ["test-utils"] }
rand.workspace = true
