[package]
name = "iota-data-ingestion-core"
authors = ["IOTA Foundation <contact@iota.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
backoff.workspace = true
bcs.workspace = true
futures.workspace = true
iota-metrics.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
object_store.workspace = true
prometheus.workspace = true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
iota-storage.workspace = true
iota-types.workspace = true
url.workspace = true
tempfile.workspace = true
tap.workspace = true
iota-protocol-config.workspace = true
iota-rest-api.workspace = true

[dev-dependencies]
rand.workspace = true
iota-types = { workspace = true, features = ["test-utils"] }
