[package]
name = "iota-data-ingestion"
version.workspace = true
authors = ["IOTA Foundation <contact@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb = "1.39"
aws-sdk-s3 = "1.42"
backoff.workspace = true
base64-url.workspace = true
bcs.workspace = true
byteorder.workspace = true
bytes.workspace = true
futures.workspace = true
iota-archival.workspace = true
iota-data-ingestion-core.workspace = true
iota-metrics.workspace = true
iota-storage.workspace = true
iota-types.workspace = true
notify.workspace = true
object_store.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
iota-types = { workspace = true, features = ["test-utils"] }
rand.workspace = true
tempfile.workspace = true
